# RadioChat

./: .gitignore  CMakeLists.txt  README.md  clang-format.txt  esp32_toolchain.cmake  workspace.code-workspace
Docs/: Used pins.txt
RadioChat/: Configuration.h  Display.cpp  Display.h  DisplaySettings.h  Esp.cpp  Esp.h  EspSettings.h  Flash.cpp  Flash.h  KeyCommand.cpp  KeyCommand.h  KeyHandler.cpp  KeyHandler.h  KeyMapBase.cpp  KeyMapRus.cpp  KeyMapRus.h  Keyboard.cpp  Keyboard.h  KeyboardSettings.h  Language.h  LedIndicator.cpp  LedSettings.h  LogTraceLevel.h  Logger.cpp  Logger.h  LoggerSettings.h  Lora.cpp  Lora.h  Melody.h  PinSet.h  Radio.cpp  Radio.h  RadioChat.cpp  RadioChat.h  RadioChat.ino  RadioCommand.h  RadioDef.cpp  RadioDef.h  RadioSettings.h  SafeQeue.h  (+21 more)
RadioChat/Framework/: Configuration.h  RadioChat.cpp  RadioChat.h  Utils.h
RadioChat/Framework/Display/: Display.h
RadioChat/Framework/Esp/: EspSettings.h
RadioChat/Framework/Keyboard/: KeyCommand.cpp  KeyHandler.cpp  KeyMapBase.h  KeyMapEng.h  KeyState.h  KeyboardSettings.h
RadioChat/Framework/Logger/: Logger.cpp
RadioChat/Framework/Sound/: Sound.cpp  Sound.h
RadioChat/Framework/UI/: UIPageBase.h  UIPageType.h
RadioChat/Sources/: RadioChat.h  Settings.h
RadioChat/Sources/Display/: Display.cpp  Display.h
RadioChat/Sources/Esp/: Esp.cpp
RadioChat/Sources/Flash/: Flash.cpp  FlashSettings.h
RadioChat/Sources/Keyboard/: KeyMapEng.cpp  KeyMapRus.cpp  Keyboard.h  Language.cpp
RadioChat/Sources/Led/: LedIndicator.cpp
RadioChat/Sources/Logger/: LogTraceLevel.h  LoggerSettings.h
RadioChat/Sources/UI/: UI.cpp  (+2 more)
RadioChat/src/: Configuration.h  IniFile.cpp  IniFile.h  JsonReader.cpp  JsonReader.h  RadioChat.cpp  RadioChat.h  Settings.cpp  Settings.h  SettingsReader.cpp  SettingsReader.h  SettingsWriter.cpp  SettingsWriter.h  Utils.cpp  Utils.h
msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  RadioChat.sln  RadioChat.vcxproj  RadioChat.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
(+146 files in other folders)
